Probando y Testiando errores

--- a/src/views/partials/navegacion.hbs
+++ b/src/views/partials/navegacion.hbs
@@ -18,7 +18,7 @@
       </li>
       {{#if user}}
       <li class="nav-item">
-        <a class="nav-link" href="/follow">Tareas: {{user.username}}</a>
+        <a class="nav-link" href="/seguimiento">Tareas: {{user.username}}</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/logout">Salir</a>
