--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -7,7 +7,7 @@
                     <p><strong>{{user.username}}</strong></p>
                     <h4>Cargo:</h4>
                     <p><strong>{{user.cargo}}</strong></p>
-                    <a href="/follow" class="btn btn-primary m-4"> Tareas </a>
+                    <a href="/seguimiento" class="btn btn-primary m-4"> Tareas </a>
                 </div>
             </div>
         </div>
