--- a/src/views/seguimiento/agregar.hbs
+++ b/src/views/seguimiento/agregar.hbs
@@ -3,7 +3,7 @@
         <div class="col-md-4 mx-auto">
             <div class="card">
                 <div class="card-body">
-                   <form action="/follow/agregar" method="POST">
+                   <form action="/seguimiento/agregar" method="POST">
                         <div class="form-group">
                             <input type="text" class="form-control" name="title" placeholder="Título de la Tarea" autofocus required>
                         </div>
