--- a/src/views/seguimiento/list.hbs
+++ b/src/views/seguimiento/list.hbs
@@ -11,7 +11,7 @@
                              <p class="m-2">Urgencia: <strong>{{ urgencia }}</strong></p>
                             <p class="m-2">{{ descripción }}</p> 
                             <p> {{timeAgo tiempoDeCreación}} </p>
-                            <a href="/follow/delete/{{id}}" class="btn btn-danger btn-block"> Borrar Tarea</a>
+                            <a href="/seguimiento/delete/{{id}}" class="btn btn-danger btn-block"> Borrar Tarea</a>
                     </div>
                 </div>
             </div>
