--- a/src/views/partials/mensajes.hbs
+++ b/src/views/partials/mensajes.hbs
@@ -73,3 +73,18 @@
     </div>
 </div>
 {{/if}}
+
+{{#if nuevoUsuario}}
+<div class="container p-4">
+    <div class="row">
+        <div class="col-md-4 mx-auto">
+            <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                {{nuevoUsuario}}
+                <button type="button" class="close" data-dismiss="alert" aria-hidden="close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+{{/if}}
