--- a/src/views/seguimiento/dashboard.hbs
+++ b/src/views/seguimiento/dashboard.hbs
@@ -8,7 +8,7 @@
         <div class="col-md-8 mx-auto">
             <div class="card">
                 <div class="card-body">
-                   <form action="/follow/dashboard" method="POST">
+                   <form action="/dashboard" method="POST">
                         <div class="form-group">
                             <input type="text" class="form-control" name="title" placeholder="Título de la Tarea" autofocus required>
                         </div>
