--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -2,7 +2,7 @@
 
   <h1 class="display-4">Busca de manera ordenada y sencilla tus actividades</h1>
   <hr class="my-4">
-  <p>Recordá siempre es más fácil y mejor en equipo.
+  <p>Recordá, siempre es más fácil y mejor en equipo.
   </p>
   <a class="btn btn-primary btn-lg" href="/users/signin" role="button">Ingresar</a>
 </div>
