--- a/src/views/notes/dashboard.hbs
+++ b/src/views/notes/dashboard.hbs
@@ -1,6 +1,6 @@
 <div>
     <h3 class="">
-        ASIGNAR TAREA 
+        <strong>ASIGNAR TAREA</strong>  
     </h3>
 </div>
 <div class="container p-4 animation-target">
@@ -34,7 +34,7 @@
 </div>
 <div>
     <h3 class="">
-        EQUIPO 
+        <strong>EQUIPO </strong> 
     </h3>
 </div>
 <div class="container p-4">
@@ -63,7 +63,7 @@
 </div>
 <div>
     <h3 class="text-align list-group-horizontal">
-        TAREAS DADAS 
+        <strong>TAREAS DADAS </strong> 
     </h3>
 </div>
 <div class="container p-4">
