--- a/src/views/notes/new-note.hbs
+++ b/src/views/notes/new-note.hbs
@@ -1,4 +1,4 @@
-<div class="col-md-4 mx-auto">
+<div class="col-md-4 mx-auto animation-target">
   <div class="card text-center">
     <div class="card-header">
       <h3>Nueva Tarea</h3>
@@ -15,7 +15,7 @@
           <textarea name="descripción" class="form-control" placeholder="Descripción"></textarea>
         </div> 
         <div class="form-group">
-          <button class="btn btn-primary btn-block" type="submit">
+          <button class="btn btn-success btn-block" type="submit">
             Guardar
           </button>
         </div>
