--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -2,8 +2,9 @@
   <div class="col-md-4 mx-auto">
     <div class="card mt-4 text-center">
       <div class="card-header">
-        <h1 class="h4">
+        <h1 class="h4"><strong> 
           Ingreso / Log in
+          </strong>
         </h1>
       </div>
         <img class="rounded-circle mx-auto d-block logo m-4" src="/img/usuario.jpg" alt="Logo">
@@ -16,7 +17,7 @@
             <input type="password" class="form-control" name="password" placeholder="Password">
           </div>
           <button class="btn btn-primary btn-block">
-            Signin 
+            Entrar 
           </button>
         </form>
       </div>
