--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -1,8 +1,21 @@
 <section class="card">
   <div class="card-body">
-    <h1>About</h1>
+    <h1><strong>Nosotros </strong></h1>
     <p>
-      Adipisicing lorem laudantium fuga excepturi iste earum? Architecto et sint exercitationem nihil voluptatum? Quae dolores sint fugiat inventore soluta ad Tenetur minima odit qui fugit eveniet minima? Repellat nobis harum quia placeat eveniet fugit voluptatem Pariatur maiores molestiae est quas.
+     <strong> Confianza: </strong> Se refiere a la calidad de las relaciones que se establecen en el interior del  ambito laboral. Si las dinámicas son fluidas y eficaces, el nivel de confianza entre los trabajadores será alto y las relaciones muy productivas. Esa misma confianza se transmitirá en el momento de tratar con la gente.
+    </p>
+    <p>
+      <strong>Responsabilidad: </strong>
+      Ser responsable es adquirir conciencia de las decisiones que se toman durante la gestión empresarial. Esta responsabilidad es tanto interna como externa: hacia los propios trabajadores y hacia los clientes y el entorno en general. Además, supone el respeto de ciertas normas y leyes.
+    </p>
+    <p>
+      <strong>Integridad: </strong> Una Dirección es íntegra cuando se presenta ante sí misma y ante los demás tal como es. No es más ni menos de lo que ya es. Y, encima, tiene claro que cada una de sus actuaciones debe estar regulada por la moral.
+    </p>
+    <p>
+      <strong>Disponibilidad al cambio: </strong>Las Direcciones deben estar dispuestas a adoptar cambios cuando sea necesario.
+    </p>
+    <p>
+      <strong>Pasión: </strong>No hay nada más contraproducente que un modelo que no inspire pasión por su actividad. Pasión es querer lo que hacemos y luchar día a día por mejorar en nuestras tareas.
     </p>
   </div>
 </section>
