--- a/src/views/notes/all-notes.hbs
+++ b/src/views/notes/all-notes.hbs
@@ -4,10 +4,10 @@
     <div class="card">
       <div class="card-body">
         <h4 class="card-title d-flex justify-content-between align-items-center">
-          {{ title }} <a href="/notes/edit/{{_id}}"><i class="fas fa-edit"></i></a>
+          {{title}} <a href="/notes/edit/{{_id}}"><i class="fas fa-edit"></i></a>
         </h4>
-        <p>{{ descripción }} </p>
-        <p>{{ urgencia }} </p>
+        <p>{{descripción}} </p>
+        <p>{{urgencia}} </p>
         <!-- DELETE REQUEST -->
         <form action="/notes/delete/{{_id}}?_method=DELETE" method="POST">
           <input type="hidden" name="_method" value="DELETE">
@@ -19,7 +19,7 @@
   {{else}}
   <div class="card mx-auto">
     <div class="card-body">
-      <h1>Hola {{users.name}}</h1>
+      <h1>Hola {{user.name}}</h1>
       <p clsss="lead">No hay tareas asignadas.</p>
       <a href="/notes/add" class="btn btn-success btn-block">Agregar tarea</a>
     </div>
