--- a/src/views/notes/edit-note.hbs
+++ b/src/views/notes/edit-note.hbs
@@ -7,7 +7,7 @@
 </div>
 {{/each}}
 
-<div class="col-md-4 mx-auto">
+<div class="col-md-4 mx-auto animation-target">
   <div class="card">
     <div class="card-header">
       <h3>Tarea a editar</h3>
@@ -25,7 +25,7 @@
           <textarea name="description" class="form-control">{{note.descripción}}</textarea>
         </div>
         <div class="form-group">
-          <button class="btn btn-primary btn-block" type="submit">
+          <button class="btn btn-success btn-block" type="submit">
             Guardar
           </button>
         </div>
