--- a/src/views/partials/navegationUser.hbs
+++ b/src/views/partials/navegationUser.hbs
@@ -11,7 +11,7 @@
         <a class="nav-link" href="/notes">Inicio<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/notes">Tareas: {{users.username}}</a>
+        <a class="nav-link" href="/notes">Tareas: {{user.username}}</a>
       </li>
        <li class="nav-item">
         <a class="nav-link" href="/notes/add"> Agrega una Tarea</a>
