--- a/src/views/users/signup.hbs
+++ b/src/views/users/signup.hbs
@@ -1,8 +1,9 @@
 <div class="row">
   <div class="col-md-4 mx-auto">
     <div class="card">
-      <div class="card-header">
+      <div class="card-header"><strong>
         Registro de Cuenta
+        </strong>
       </div>
       <div class="card-body">
         <form action="/users/signup" method="POST">
@@ -25,7 +26,7 @@
             <input type="password" class="form-control" name="confirm_password" placeholder="Confirmar Password" value="{{confirm_password}}" required>
           </div>
           <button class="btn btn-primary btn-block">
-            Signup 
+            Registrarse! 
           </button>
         </form>
       </div>
